force-app/main/default/objects/Investment_Committee_Application__c/Investment_Committee_Application__c.object-meta.xml
<CustomObject>
    <description>The Investment Committee(s) an individual Application has been submitted to</description>
    <label>Investment Committee Application</label>
    <nameField>
        <displayFormat>ICA-{00000000}</displayFormat>
        <label>Investment Committee Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Committee Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>