force-app/main/default/objects/Investment_Committee_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Investment Committee Applications</relationshipLabel>
    <relationshipName>Investment_Committee_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>