force-app/main/default/objects/Investment_Committee_Application__c/fields/Committee_Comments_on_Application__c.field-meta.xml
<CustomField>
    <fullName>Committee_Comments_on_Application__c</fullName>
    <description>A summary of the comments from the committee on the application</description>
    <label>Committee Comments on Application</label>
    <type>TextArea</type>
</CustomField>