force-app/main/default/objects/Investment_Committee_Application__c/fields/Investment_Committee_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committee_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Committee Meeting</label>
    <referenceTo>Investment_Committee_Meeting__c</referenceTo>
    <relationshipLabel>Investment Committee Applications</relationshipLabel>
    <relationshipName>Investment_Committee_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>